--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
-    <head></head>
-    <body>
-        Hello World
-    </body>
+  <head></head>
+  <body>
+    <script src="blocksdk.js"></script>
+    <script>
+      var sdk = new window.sfdc.BlockSDK();
+      // do something with the sdk
+    </script>
+  </body>
 </html>
