--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<html>
-  <head></head>
-  <body>
-    <script src="blocksdk.js"></script>
-    <script>
-      var sdk = new window.sfdc.BlockSDK();
-      // do something with the sdk
-    </script>
-  </body>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <title>Hello, world!</title>
+</head>
+
+<body>
+    <h1>Hello, world!</h1>
+</body>
+
 </html>
